<resources>
    <string name="app_name">MONITor</string>

    <string name="activity_monitor_webview_title">Monit Interface</string>

    <string name="activity_monitor_help_title">MONITor Help</string>
    <string name="monitor_help_add_title">Adding a Connection</string>
    <string name="monitor_help_add_help">Click the add button in the lower right corner of the screen. A dialog will appear with a form to fill out. Fill out the form and click create to add the connection. If there are errors, the connection will not be created.</string>
    <string name="monitor_help_edit_title">Editing a Connection</string>
    <string name="monitor_help_edit_help">Long click anywhere in the connection view. A dialog will appear with a form containing the populated connection information. Change any of the information and click save to update the connection.</string>
    <string name="monitor_help_delete_title">Deleting a Connection</string>
    <string name="monitor_help_delete_help">Long click anywhere in the connection view. A dialog will appear with a form containing the populated connection information. Click delete if you wish to delete this connection.</string>

    <string name="activity_monitor_settings_title">MONITor Settings</string>
    <string name="monitor_settings_ping_title">Ping Interval</string>
    <string name="monitor_settings_ping_help">This setting indicates how often MONITor should ping the connections.</string>
    <string-array name="monitor_settings_ping_options">
        <item>Fifteen Minutes</item>
        <item>Half Hour</item>
        <item>Hour</item>
        <item>Half Day</item>
        <item>Day</item>
    </string-array>
    <string name="monitor_settings_vibration_title">Vibration</string>
    <string name="monitor_settings_vibration_help">This setting determines whether MONITor should vibrate the device when providing a notification.</string>
    <string name="monitor_settings_sound_title">Sound</string>
    <string name="monitor_settings_sound_help">This setting determines whether MONITor should make a notification sound when providing a notification.</string>
    <string name="monitor_settings_check_ssl_title">Check SSL</string>
    <string name="monitor_settings_check_ssl_help">When off, MONITor will ignore SSL certificates. Useful for self-signed certificates. Should be on if possible.</string>

    <string name="activity_monitor_about_title">MONITor About</string>
    <string name="monitor_about_title">About MONITor</string>
    <string name="monitor_about_text">How do you monitor Monit and make sure it is running? You need some device that is always running to periodically check on it. Maybe the only device you have that is always on (besides the device running Monit) is an Android phone. This is where MONITor comes in handy.\n\nMONITor does not check on the status of items monitored by Monit. It only checks on Monit instances to make sure they are running and lets Monit do the rest.</string>
    <string name="monitor_about_source_title">MONITor is open source:</string>
    <string name="monitor_about_source_link_title">View Source Code</string>

    <string name="view_monitor_connection_status_label">Status:</string>
    <string name="view_monitor_connection_timestamp_label">Last Checked:</string>

    <string name="dialog_monitor_connection_name_label">Name:</string>
    <string name="dialog_monitor_connection_name_hint">Name</string>
    <string name="dialog_monitor_connection_url_label">URL:</string>
    <string name="dialog_monitor_connection_url_hint">https://www.example.com:2812/</string>
    <string name="dialog_monitor_connection_username_label">Username:</string>
    <string name="dialog_monitor_connection_username_hint">user</string>
    <string name="dialog_monitor_connection_password_label">Password:</string>
    <string name="dialog_monitor_connection_password_hint">secret</string>

    <string name="dialog_monitor_connection_add_title">Add Connection</string>
    <string name="dialog_monitor_connection_add_positive">Create</string>
    <string name="dialog_monitor_connection_add_neutral">Cancel</string>

    <string name="dialog_monitor_connection_edit_title">Edit Connection</string>
    <string name="dialog_monitor_connection_edit_positive">Save</string>
    <string name="dialog_monitor_connection_edit_negative">Delete</string>
    <string name="dialog_monitor_connection_edit_neutral">Cancel</string>

    <string name="error_url_invalid">Error: invalid URL.</string>
    <string name="error_adding_connection">Error: couldn\'t add connection.</string>
    <string name="error_editing_connection">Error: couldn\'t edit connection.</string>

    <string name="notification_monitor_status_title">MONITor Detected an Issue</string>
    <string name="notification_monitor_status_text">%1$s: %2$s</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="navigation_drawer_options">
        <item>Help</item>
        <item>Settings</item>
        <item>About</item>
        <item>Developer</item>
    </string-array>

    <string name="source_link">https://github.com/kjpc-tech/MONITor/</string>
    <string name="developer_link">https://kjpc.tech/developerlink/</string>
</resources>
