<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:columnCount="2"
        android:padding="2dp"
        android:rowCount="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="0"
            android:text="@string/dialog_monitor_connection_name_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialog_connection_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="10"
            android:hint="@string/dialog_monitor_connection_name_hint"
            android:inputType="text|textCapWords"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="1"
            android:text="@string/dialog_monitor_connection_url_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialog_connection_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/dialog_monitor_connection_url_hint"
            android:inputType="textUri"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="2"
            android:text="@string/dialog_monitor_connection_username_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialog_connection_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="10"
            android:hint="@string/dialog_monitor_connection_username_hint"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="3"
            android:text="@string/dialog_monitor_connection_password_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialog_connection_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:ems="10"
            android:hint="@string/dialog_monitor_connection_password_hint"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </GridLayout>

</LinearLayout>
